# ppcli

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/ppcli/: __main__.py  cli.py  datastructures.py
tests/: test_datastructures_conf.py  test_datastructures_jobs.py
tests/files/: pyproject.json  pyproject_no_ppcli.toml  pyproject_ppcli_not_dict.toml  pyproject_test.toml  pyproject_test_no_job.toml
