[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppcli"
dynamic = ["version"]
description = "run shell command defined in pyproject.toml"
authors = [
    { name = "jlshix", email = "jlshix@163.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
ppcli = "ppcli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ppcli"]

[tool.hatch.version]
path = "src/ppcli/__init__.py"

[tool.ppcli.build]
shell = "python3 -m build --no-isolation --wheel"

[tool.ppcli.install]
shell = "pip install --find-links=dist ppcli"

[tool.ppcli.uninstall]
shell = "pip uninstall ppcli"

[tool.ppcli.test]
shell = "pytest --cov=src tests/"

[tool.ppcli.mypy]
shell = "mypy --strict src/"

[tool.ppcli.check]
shell = "ruff check"

[tool.ppcli.format]
shell = "ruff format"
